# igneous-md

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Install.md  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md  docs.md  flake.nix  main.js  vendor.env
.github/workflows/: build.yml  checks.yml  nix.yml
assets/: NOTICE
crates/igneous-md/: Cargo.toml
crates/igneous-md-viewer/: Cargo.toml  build.rs
crates/igneous-md-viewer/src/: dist.js  index.html  index.html.askama  lib.rs  main.js  main.rs  mathjaxV4.js
crates/igneous-md/src/: cli.rs  client.rs  convert.rs  errors.rs  export.rs  highlight.min.js  main.js  main.rs  paths.rs  server.rs
crates/igneous-md/src/config/: generate.rs  mod.rs
crates/igneous-md/src/handlers/: mod.rs  ws.rs
crates/igneous-md/src/handlers/ws/: msg.rs
crates/igneous-md/src/ws/: handshake.rs  mod.rs  msg.rs
example/: config.toml
example/css/: github-markdown-dark.css  github-markdown-light.css
example/css/hljs/: github-dark.css  github-light.css
src/: bidirectional_cycle.rs  cli.rs  client.rs  config.rs  convert.rs  export.rs  handlers.rs  main.js  main.rs  paths.rs
src/config/: generate.rs  mod.rs
src/handlers/: mod.rs  ws.rs
