[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/DOD-101/igneous-md"
authors = ["David Thievon"]

[workspace.dependencies]

igneous-md-viewer = { version = "*", path = "crates/igneous-md-viewer" }
clap = { version = "4.5.16", features = ["derive"] }
clap_complete = "4.5.44"

[workspace.metadata.crane]
name = "igneous-md-workspace"
