[package]
name = "igneous-md-viewer"
description = "The viewer component of igneous-md"
version = "0.1.0"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
webkit2gtk = "2.0.1"
gtk = "0.18.1"
clap.workspace = true
clap_complete.workspace = true
