[package]
name = "igneous-md-viewer"
description = "The viewer component of igneous-md"
version = "0.2.0"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
clap_complete.workspace = true
gtk4 = "0.10.3"
webkit6 = "0.5.0"
open = "5.3.0"

[build-dependencies]
askama = { version = "0.15.4", default-features = false, features = [
    "derive",
    "std",
    "config",
] }
