[package]
name = "igneous-md"
description = "The simple and lightweight markdown viewer"
version = "0.2.1"
categories = ["gui", "development-tools"]
keywords = ["markdown", "gui", "markdown-viewer", "md"]
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["generate_config", "viewer"]
generate_config = ["dep:reqwest"]
viewer = ["dep:igneous-md-viewer"]

[dependencies]
igneous-md-viewer = { workspace = true, optional = true }
chrono = { version = "0.4.38", features = ["clock"] }
clap.workspace = true
home = "0.5.9"
itertools = "0.13.0"
kuchikiki = "0.8.2"
log = "0.4.22"
markdown = "1.0.0-alpha.20"
open = "5.3.0"
regex = "1.11.1"
reqwest = { version = "0.12.11", optional = true }
rocket = "0.5.1"
rocket_ws = "0.1.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.134"
serde_urlencoded = "0.7.1"
simple_logger = "5.0.0"
tokio = { version = "1.42.0", features = ["rt", "fs"] }
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4"] }
