[package]
name = "igneous-md"
description = "The simple and lightweight markdown viewer"
version = "0.3.0"
categories = ["gui", "development-tools"]
keywords = ["markdown", "gui", "markdown-viewer", "md"]
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["viewer"]
# TODO: We might remove this feat and just spawn it using a command
viewer = ["dep:igneous-md-viewer"]

[dependencies]
igneous-md-viewer = { workspace = true, optional = true }
chrono = { version = "0.4.38", features = ["clock"] }
clap.workspace = true
clap_complete.workspace = true
itertools = "0.13.0"
kuchikiki = "0.8.2"
lightningcss = { version = "1.0.0-alpha.71", features = ["bundler"] }
log = "0.4.22"
markdown = "1.0.0-alpha.20"
regex = "1.11.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.134"
simple_logger = "5.0.0"
tokio = { version = "1.42.0", features = [
    "rt",
    "fs",
    "net",
    "macros",
    "process",
    "sync",
    "time",
    "signal",
    "rt-multi-thread",
], default-features = false }
notify = "8.0.0"
markup5ever = "0.11.0"
dirs = "6.0.0"
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
http = "1.1"
form_urlencoded = "1.2.*"
thiserror = "2.0.18"
strum = { version = "0.28.0", features = ["derive"] }
git-version = "0.3"
anyhow = "1.0.102"
